corrigindo enum de registro